--- a/public/editarProducto.html
+++ b/public/editarProducto.html
@@ -19,7 +19,7 @@
         }
 
         .navbar {
-            background-color: #6c5ce7;
+            background-color: #1e00ff;
         }
 
         .navbar-nav .nav-link {
@@ -41,7 +41,7 @@
         }
 
         .card-header {
-            background-color: #6c5ce7;
+            background-color: #1e00ff;
             color: #fff;
             padding: 10px;
             border-top-left-radius: 10px;
@@ -98,7 +98,7 @@
         }
 
         .table th {
-            background-color: #6c5ce7;
+            background-color: #1e00ff;
             color: #fff;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
@@ -137,10 +137,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Usuarios Pambazin</a>
+                        <a class="nav-link active" aria-current="page" href="/">Usuarios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./productos.html">Productos Pambazin</a>
+                        <a class="nav-link" href="./productos.html">Productos</a>
                     </li>
                 </ul>
             </div>
@@ -153,7 +153,7 @@
                 <form action="" id="enviarData">
                     <div class="card">
                         <div class="card-header">
-                            <h2>Nuevo Producto Pambazin</h2>
+                            <h2>Nuevo Producto</h2>
                         </div>
                         <div class="card-body">
                             <p class="fs-4 col-8">Nombre de Producto</p>
