--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Sockets Pambazin</title>
+    <title>Sockets</title>
     <script defer src="https://mostrar-y-guardar-productos-con-sockets.onrender.com/socket.io/socket.io.min.js"></script>
     <script src="js/script.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -20,7 +20,7 @@
         }
 
         .navbar {
-            background-color: #6c5ce7;
+            background-color: #1e00ff;
         }
 
         .navbar-nav .nav-link {
@@ -42,7 +42,7 @@
         }
 
         .card-header {
-            background-color: #6c5ce7;
+            background-color: #1e00ff;
             color: #fff;
             padding: 10px;
             border-top-left-radius: 10px;
@@ -99,7 +99,7 @@
         }
 
         .table th {
-            background-color: #6c5ce7;
+            background-color: #1e00ff;
             color: #fff;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
@@ -138,10 +138,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Usuarios Pambazin</a>
+                        <a class="nav-link active" aria-current="page" href="/">Usuarios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./productos.html">Productos Pambazin</a>
+                        <a class="nav-link" href="./productos.html">Productos</a>
                     </li>
                 </ul>
             </div>
@@ -154,7 +154,7 @@
                 <form action="" id="enviarData">
                     <div class="card">
                         <div class="card-header">
-                            <h2>Nuevo Usuario Pambazin</h2>
+                            <h2>Nuevo Usuario</h2>
                         </div>
                         <div class="card-body">
                             <p class="fs-4 col-6">Nombre </p>
